test/invalid/baseline/setter-creator.txt
Syntax error at line 3 in setter-creator.webidl, since `interface OrderedMap`:
  setter creator void set(DOMString name
                 ^ Invalid operation
